Remove padding on smaller devices, wrap text correctly with CSS

--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -22,3 +22,13 @@
 .api-quota {
     display: inline;
 }
+
+.wrap-text {
+    word-wrap: break-word;
+}
+
+@media (min-width: 700px) {
+    table {
+        table-layout: fixed;
+    }
+}
